Fix overflow problem

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -194,6 +194,7 @@ hr {
 
 table {
     width: 100%;
+    max-width: 100%;
     border-collapse: collapse;
     font-size: 0.85rem;
     text-align: left;
@@ -360,7 +361,6 @@ pre {
 .container {
   --bs-gutter-x: 1.5rem;
   --bs-gutter-y: 0;
-  width: 100%;
   padding-right: calc(var(--bs-gutter-x) * 0.5);
   padding-left: calc(var(--bs-gutter-x) * 0.5);
   margin-right: auto;
